--- a/studySpot/myStyle.css
+++ b/studySpot/myStyle.css
@@ -733,6 +733,7 @@ list-style-type: none;
 	line-height: 1;
 	position: relative;
 	top:5px;
+}
 
 
 #directions {
@@ -784,15 +785,119 @@ list-style-type: none;
 	text-align: center;
 }
 
-#andersonRPage {
-	position: relative;
+
+
+#titleCont {
+width: 180px;
+position: relative;
+float: left;
+text-align: left;
+top:48%;
+display: inline-block;
+
 }
 
+#addFav {
+	width: 60px;
+	position: relative;
+	float:right;
+	text-align: center;
+	display: inline-block;
+	top:50%;
+}
+
+#addFav img {
+	position: relative;
+	right:1px;
+}
+#addFav h3 {
+	position: relative;
+	margin:auto;
+	line-height: 13px;
+	top:2px;
+	color:#C98BC4;
+	height: 100px;
+
+}
+
+#titleCont h1 {
+	position: relative;
+	bottom:11px;
+	line-height: 14px;
+}
 #imgContainer{
 	position: absolute;
 	top:0px;
-	right:0px;
 	left: 0px;
+	float:left;
 	width: 100%;
+	height: 200px;
+	display: block;
+
+
+}
+
+#imgContainer img {
+	max-width:100%;
+	position: absolute;
+
+}
+#amen {
+	position: absolute;
+	text-align: left;
+}
+#amen ul {
+	list-style-type: none;
+
+}
+
+
+#amen li {
+	position: relative;
+	right:38px;
+}
+
+#col1 {
+	width:150px;
+	position: relative;
+	float: left;
+	display: inline-block;
+	top:260px;
+
+}
+#col2 {
+	width:150px;
+	position: relative;
+	float: right;
+	display: inline-block;
+	top:260px;
+}
+
+#resPage{
+	position: relative;
+	height: 480px;
+}
+#navigateB {
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	background-color: #67B2AE;
+	width: 100%;
+
+}
+#navigateB h2 {
+	color:#ffffff;
+	position: relative;
+	left:28%;
+	display: inline-block;
+
+}
+
+#thumbs {
+	height:40px;
+	position: relative;
+	display: inline-block;
+	left:27%;
+	top:8px;
 
 }
