--- a/studySpot/myStyle.css
+++ b/studySpot/myStyle.css
@@ -439,6 +439,14 @@ h3 {
 	padding-bottom: 5px;
 }
 
+#resultsPage h2 {
+		font-family: Montserrat, 100;
+	}
+
+#resultsPage h3 {
+		font-family: Montserrat, 100;
+	}
+
 
 
 
