--- a/studySpot/myStyle.css
+++ b/studySpot/myStyle.css
@@ -447,8 +447,14 @@ h3 {
 		font-family: Montserrat, 100;
 	}
 
+#favoritesPage3 h2{
+	font-family: Montserrat, 100;
 
+}
 
+#favoritesPage3 h3 {
+		font-family: Montserrat, 100;
+	}
 
 .resultsImage {
 	float: left;
