--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -721,6 +721,13 @@ transition: opacity 0.35s ease 0s, transform 0.35s ease 0s;
 	filter: alpha(opacity=97);
 }
 
+
+.popup-calloutBut {
+	padding:40px 40px 40px 40px;
+	background: #f5f5f5;
+	text-align: center;
+}
+
 .popup-content,
 .popup-callout {
 	padding: 40px 40px 10px 40px;
@@ -876,20 +883,7 @@ button.mfp-close {
  * Contact and Map
 /* ---------------------------------------------- */
 
-#map-section {
-	position: relative;
-	height: 450px;
-	width: 100%;
-}
 
-#map {
-	height: 450px;
-	width: 100%;
-}
-
-.ajax-response {
-	text-align: center;
-}
 
 /* ---------------------------------------------- /*
  * Footer
@@ -1236,4 +1230,11 @@ font-size: 14px;
 font-family: 'Montserrat', sans-serif;
 text-align: center;
 
+}
+
+#footerType {
+	position: relative;
+	height: 40px;
+	width: 100%;
+	background-color: white;
 }
