--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ img {
 }
 
 a {
-	color: #49e2d6;
+	color: #F79023;
 }
 
 a:hover {
@@ -145,7 +145,7 @@ h6 {
 }
 
 .progress-bar {
-	background-color: #49e2d6;
+	background-color: #F79023;
 }
 
 /* ---------------------------------------------- /*
@@ -173,7 +173,7 @@ h6 {
 .nav-pills > li.active > a,
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
-	background: #49e2d6;
+	background: #F79023;
 }
 
 /* ---------------------------------------------- /*
@@ -210,7 +210,7 @@ h6 {
 }
 
 .label-custom-1 {
-	background: #49e2d6;
+	background: #F79023;
 }
 
 .label-custom-2 {
@@ -290,8 +290,8 @@ textarea.form-control {
 }
 
 .btn-custom-1 {
-	background: #49e2d6;
-	border: 1px solid #49e2d6;
+	background: #F79023;
+	border: 1px solid #F79023;
 	color: #fff;
 }
 
@@ -305,8 +305,8 @@ textarea.form-control {
 }
 
 .btn-custom-2 {
-	background: #49e2d6;
-	border: 1px solid #49e2d6;
+	background: #F79023;
+	border: 1px solid #F79023;
 	color: #fff;
 }
 
@@ -329,8 +329,8 @@ textarea.form-control {
 .btn-custom-3:focus,
 .btn-custom-3:active,
 .btn-custom-3.active {
-	background: #49e2d6;
-	border-color: #49e2d6;
+	background: #F79023;
+	border-color: #F79023;
 	color: #FFF;
 }
 
@@ -456,14 +456,14 @@ margin-bottom: 160px;
 }
 
 .module-line {
-	background: #49e2d6;
+	background: #F79023;
 	width: 55px;
 	height: 1px;
 	margin: 30px auto;
 }
 
 #blue {
-	color: #49e2d6;
+	color: #F79023;
 }
 
 .module-icon {
@@ -852,7 +852,7 @@ margin-top: 80px;
 }
 
 .popup-line {
-	background: #49e2d6;
+	background: #F79023;
 	width: 55px;
 	height: 1px;
 	margin: 15px auto;
@@ -1031,7 +1031,7 @@ button.mfp-close {
 .navbar-custom .navbar-nav > li.active a {
 	background: none;
 	outline: 0;
-	color: #49e2d6;
+	color: #F79023;
 }
 
 .navbar-custom .navbar-brand {
@@ -1041,7 +1041,7 @@ button.mfp-close {
 
 .navbar-custom .dropdown-menu {
 	border: 0;
-	border-top: 2px solid #49e2d6;
+	border-top: 2px solid #F79023;
 	border-radius: 0;
 }
 
