--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -322,6 +322,16 @@ textarea.form-control {
 	color: #222
 }
 
+.btn-custom-4 {
+	margin-top: 40px;
+	margin-bottom: 40px;
+}
+
+.popup-contentBut {
+	padding-bottom: 40px;
+}
+
+
 .btn-custom-3:hover,
 .btn-custom-3:focus,
 .btn-custom-3:active,
@@ -635,7 +645,9 @@ textarea.form-control {
 	overflow: hidden;
 	width: 25%;
 	width: 33.333%;
+	float: left;
 	padding: 0;
+	position: relative;
 }
 
 .portfolio-items-container .portfolio-item img {
@@ -773,10 +785,7 @@ padding-right: 40px;
 
 }
 
-.popup-contentBut {
-	padding-top:40px;
-	padding-bottom: 40px;
-}
+
 
 .popup-callout {
 	background: #f5f5f5;
