--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1336,6 +1336,11 @@ margin-bottom: 15px;
 }
 
 
+.caption-inner {
+	visibility: visible;
+}
+
+
 body {
 	font: 400 13px/1.8 'Open Sans', serif;
 }
