--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -774,6 +774,15 @@ transition: opacity 0.35s ease 0s, transform 0.35s ease 0s;
 }
 
 
+.popup-content200 {
+
+	padding-bottom: 0px;
+	padding-top: 20px;
+	padding-left: 40px;
+	padding-right: 40px;
+}
+
+
 .popup-contentTitleBtnIm {
 	padding-top: 50px;
 	padding-bottom: 20px;
