--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 body {
-	font: 400 15px/1.8 'Open Sans', serif;
+	font: 400 16px/1.8 'Open Sans', serif;
 	color: #494542;
 	overflow-x: hidden;
 }
@@ -438,8 +438,8 @@ textarea.form-control {
 
 .headerUnderText {
 	text-align: center;
-	margin-top: 30px;
-	margin-bottom: 15px;
+	margin-top: 35px;
+	margin-bottom: 20px;
 
 }
 
@@ -644,7 +644,7 @@ textarea.form-control {
 	position: relative;
 	display: block;
 	width: 100%;
-	padding: 0;
+	padding: 0px;
 	margin: 0;
 }
 
@@ -657,7 +657,7 @@ textarea.form-control {
 	width: 25%;
 	width: 33.333%;
 	float: left;
-	padding: 0;
+	padding: 20px;
 	position: relative;
 }
 
@@ -735,11 +735,11 @@ transition: opacity 0.35s ease-out .25s, transform 0.35s ease-in .25s;
 
 .portfolio-items-container .portfolio-item:hover figcaption {
 	opacity: 1;
-	-webkit-transform: scale(1);
-	-moz-transform: scale(1);
-	-ms-transform: scale(1);
-	-o-transform: scale(1);
-	transform: scale(1);
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	-o-transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 /* Ajax portfolio */
@@ -931,6 +931,12 @@ button.mfp-close {
 			border-radius: 3px 0 0 3px;
 }
 
+#gameSlider {
+	position: relative;
+	width: 80%;
+	margin: auto;
+}
+
 /* ---------------------------------------------- /*
  * Twitter
 /* ---------------------------------------------- */
@@ -1041,6 +1047,10 @@ button.mfp-close {
 	position: relative;
 	width: 100%;
 	z-index: 998;
+}
+
+.white-popup-block2 {
+padding-top: 20px;
 }
 
 .navbar-custom {
@@ -1274,7 +1284,12 @@ button.mfp-close {
 	height: 597px;
 }
 
+.headerUnderText {
+	text-align: center;
+	margin-top: 35px;
+	margin-bottom: 25px;
 
+}
 }
 
 
@@ -1290,16 +1305,6 @@ button.mfp-close {
 	margin: 40px auto;
 	margin-bottom: 0px;
 	margin-top: 30px;
-}
-
-	#gameGif {
-	width: 500px;
-	height: 364px;
-}
-
-#gameGif2 {
-	width: 500px;
-	height: 373px;
 }
 
 	.portfolio-items-container .portfolio-item {
@@ -1341,7 +1346,18 @@ body {
 	height: 373px;
 }
 
+.headerUnderText {
+	text-align: center;
+	margin-top: 35px;
+	margin-bottom: 25px;
+
 }
+
+}
+
+
+
+
 
 @media (max-width: 480px) {
 
@@ -1354,7 +1370,9 @@ body {
 	margin-bottom: 0px;
 	margin-top: 20px;
 }
-
+.white-popup-block2 {
+padding-top: 10px;
+}
 #gameGif {
 	width: 350px;
 	height: 255px;
@@ -1434,7 +1452,7 @@ font-size: 13px;
 .headerUnderText {
 	text-align: center;
 	margin-top: 20px;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
 
 }
 
